--- a/css/index.css
+++ b/css/index.css
@@ -432,3 +432,115 @@ fieldset[disabled] .wjs_nav .btn-link:focus {
 .wjs_product .wjs_product_tabsParent{
    overflow: hidden;
 }
+@media screen and (max-width: 768px){
+    .wjs_product .tab-pane > .col-xs-12{
+     padding-left: 0;
+     padding-right: 0;
+  }
+}
+/* 商品盒子 */
+.product_box{
+  color: #666;
+  height: 150px;
+  display: block;
+  box-shadow: 2px 2px 2px #d8d8d8;
+  background: #fff;
+  margin-top: 30px; 
+  position: relative;
+}
+.product_box:hover{
+  color: #666;
+}
+.product_box.active{
+  background: #e92322;
+  color: #fff;
+}
+.product_box.active:before{
+  content: "\E915";
+  font-family: "wjs";
+  font-size: 34px;
+  position: absolute;
+  top: -7px;
+  left: 0;
+}
+.product_box .box_left{
+  overflow: hidden;
+  font-size: 12px;
+}
+.product_box .box_left h3{
+  font-size: 16px;
+  text-align: center;
+}
+.product_box .box_left p{
+  margin-bottom: 5px;
+}
+.product_box .box_right{
+  float: right;
+  width: 108px;
+  height: 150px;
+  text-align: center;
+  position: relative;
+  border-left: 1px dashed #ccc;
+}
+.product_box.active .box_right{
+  border-left: 1px dashed #c12e2a;
+}
+.product_box .box_right b{
+  font-size: 44px;
+}
+.product_box .box_right sub{
+  bottom: 0;
+}
+.product_box .box_right p:nth-of-type(1){
+  margin-top: 25px;
+  color: #e92322;
+}
+.product_box.active .box_right p:nth-of-type(1){
+  color: #fff;
+}
+.product_box .wjs_tip{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  margin-top: 10px;
+}
+.product_box .box_right::after,
+.product_box .box_right::before{
+  content: "";
+  position: absolute;
+  left: -6px;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background: #f5f5f5;
+}
+.product_box .box_right::before{
+  top: -6px;
+  box-shadow: 0 -2px 2px #d8d8d8 inset;
+}
+.product_box .box_right::after{
+  bottom: -6px;
+  box-shadow: 0 2px 2px #d8d8d8 inset;
+}
+
+.product_box .wjs_tip span{
+  width: 16px;
+  height: 16px;
+  line-height: 13px;
+  text-align: center;
+  border: 1px solid #ccc;
+  display: inline-block;
+}
+.product_box .wjs_tip span.red{
+  color: red;
+  border-color: red;
+}
+.product_box .wjs_tip span.green{
+  color: green;
+  border-color: green;
+}
+.product_box .progress{
+  height: 12px;
+  margin: 5px 0;
+}
