--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,17 @@ a:hover{
   border: none;
   border-bottom: 1px solid #ccc;
   margin-bottom: 0;
+  z-index: 1001;
+  border-radius: 0;
+  width: 100%;
+  top: 0;
+}
+@media screen and (max-width: 768px){
+  .wjs_nav .navbar-collapse {
+    position: absolute;
+    width: 100%;
+    background: #fff;
+  }
 }
 .wjs_nav .wjs_icon_logo{
   font-size: 50px;
@@ -543,4 +554,172 @@ fieldset[disabled] .wjs_nav .btn-link:focus {
 .product_box .progress{
   height: 12px;
   margin: 5px 0;
+}
+/* 新闻模块 */
+.wjs_news{
+  padding: 30px 0;
+
+}
+.wjs_news .wjs_news_title{
+  font-size: 20px;
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+  position: relative;
+}
+.wjs_news .wjs_news_title::after{
+  content: "";
+  position: absolute;
+  height: 6px;
+  width: 6px;
+  border-radius: 3px;
+  border-bottom: 1px solid #ccc;
+  bottom: -3px;
+  right: -6px;
+}
+/* 竖线 */
+.wjs_news_line{
+  position: absolute;
+  height: 100%;
+  border-left: 1px dashed #ccc;
+  width: 1px;
+  top: 0;
+  left: 44px;
+}
+/* 需要重置的内容 */
+.wjs_news_tabs {
+  
+}
+.wjs_news_tabs .wjs_icon{
+  color: #fff;
+  font-size: 30px;
+}
+.wjs_news_tabs > li {
+  float: left;
+  margin-bottom: -1px;
+}
+
+.wjs_news_tabs > li > a {
+  background: #ccc;
+  height: 60px;
+  width: 60px;
+  border-radius: 30px;
+  display: block;
+  padding: 0;
+  line-height: 60px;
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+/* tabs 在小屏幕设备显示情况 页签 需要固定间距 */
+@media screen and (min-width: 768px) and (max-width: 992px){
+  .wjs_news_tabs > li > a{
+    margin: 20px 50px;
+  }
+}
+/* tabs 在小屏幕设备以上的显示情况 页签 需要伸缩间距 */
+/* 将父元素分成四部分 */
+@media screen and (max-width: 768px){
+  .wjs_news_tabs > li{
+    width: 25%;
+  }
+  .wjs_news_tabs > li >a{
+    margin: 20px;
+  }
+}
+.wjs_news_tabs > li:last-child > a{
+  margin-bottom: 0;
+}
+.wjs_news_tabs > li > a:hover {
+  border: none;
+  background: #fff;
+  background: #E92322;
+  height: 60px;
+  width: 60px;
+  border-radius: 30px;
+  display: block;
+}
+.wjs_news_tabs > li.active > a,
+.wjs_news_tabs > li.active > a:hover,
+.wjs_news_tabs > li.active > a:focus {
+  color: #555;
+  cursor: default;
+  background: #E92322;
+  height: 60px;
+  width: 60px;
+  border-radius: 30px;
+  display: block;
+}
+.wjs_news_tabs.nav-justified {
+  width: 100%;
+  border-bottom: 0;
+}
+.wjs_news_tabs.nav-justified > li {
+  float: none;
+}
+.wjs_news_tabs.nav-justified > li > a {
+  margin-bottom: 5px;
+  text-align: center;
+}
+.wjs_news_tabs.nav-justified > .dropdown .dropdown-menu {
+  top: auto;
+  left: auto;
+}
+@media (min-width: 768px) {
+  .wjs_news_tabs.nav-justified > li {
+    display: table-cell;
+    width: 1%;
+  }
+  .wjs_news_tabs.nav-justified > li > a {
+    margin-bottom: 0;
+  }
+}
+.wjs_news_tabs.nav-justified > li > a {
+  margin-right: 0;
+  border-radius: 4px;
+}
+.wjs_news_tabs.nav-justified > .active > a,
+.wjs_news_tabs.nav-justified > .active > a:hover,
+.wjs_news_tabs.nav-justified > .active > a:focus {
+  border: 1px solid #ddd;
+}
+@media (min-width: 768px) {
+  .wjs_news_tabs.nav-justified > li > a {
+    border-bottom: 1px solid #ddd;
+    border-radius: 4px 4px 0 0;
+  }
+  .wjs_news_tabs.nav-justified > .active > a,
+  .wjs_news_tabs.nav-justified > .active > a:hover,
+  .wjs_news_tabs.nav-justified > .active > a:focus {
+    border-bottom-color: #fff;
+  }
+}
+
+.wjs_news .tab-pane > ul{
+  list-style: none;
+}
+.wjs_news .tab-pane > ul > li{
+  padding: 15px 0;
+}
+
+/* 合作伙伴 */
+.wjs_footer{
+  background: #f5f5f5;
+  padding: 20px 0;
+}
+.wjs_footer ul{
+  list-style: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-size: 60px;
+}
+.wjs_footer ul li{
+  display: inline-block;
+}
+.wjs_footer ul li a{
+  line-height: 50px;
+  vertical-align: middle;
+  display: block;
 }
